# erinys-care-memory

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.alibaba  Dockerfile.backend  LICENSE  README.md  compose.yaml  design-qa.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  governance.py  main.py  qwen_client.py  server.py
app/static/: app.js  index.html  styles.css
data/demo/: care_memory.seed.json
deploy/: alibaba-cloud-shell.md  alibaba-ecs-docker.md  alibaba-sae-container.md  current-alibaba-ecs.md
deploy/alibaba-function-compute/: README.md  env.example  smoke_test.py
docs/: alibaba_cloud_proof.md  architecture.md  development_plan_overview.md  devpost_submission.md  judge_demo_spec.md  phase1_quality_report.md  submission_checklist.md  submission_manifest.md  video_script.md
docs/design/: gui-user-stories.csv
docs/presentation/: erinys-care-memory-pitch.pptx
docs/video/: erinys-caredog-voiceover-v2.txt
scripts/: build_audio_driven_video.py  cloudshell_run.sh  ecs_install_docker.sh  generate_elevenlabs_voice.py  package_for_cloudshell.sh  release_bundle.sh  run_docker.sh  verify_service.sh
src/erinys_qwen_agent/: __init__.py  api.py  config.py  demo.py  memory_engine.py  memory_store.py  qwen_adapter.py  schemas.py
tests/: test_api.py  test_api_contract.py  test_audio_driven_video.py  test_elevenlabs_voice.py  test_governance.py  test_phase1_quality.py  test_qwen_adapter.py  test_runtime_memory.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
(+5 files in other folders)
